Perkin-UAT/force-app/main/default/objects/Order_Management__c/Order_Management__c.object-meta.xml
<CustomObject>
    <label>Order Management</label>
    <nameField>
        <displayFormat>{YY}{MM}{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>