Perkin-UAT/force-app/main/default/objects/Order_Management__c/fields/Actual_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date__c</fullName>
    <label>Actual Ship Date</label>
    <type>Date</type>
</CustomField>