Perkin-UAT/force-app/main/default/objects/Order_Management__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Care</relationshipLabel>
    <relationshipName>R00N30000000rotvEAA</relationshipName>
    <type>Lookup</type>
</CustomField>