Perkin-UAT/force-app/main/default/objects/Order_Management__c/fields/Customer_PO_Num__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Num__c</fullName>
    <label>Customer PO Num</label>
    <length>25</length>
    <type>Text</type>
</CustomField>