Perkin-UAT/force-app/main/default/objects/Order_Management__c/fields/End_User_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Care</relationshipLabel>
    <relationshipName>R00N30000000ros5EAA</relationshipName>
    <type>Lookup</type>
</CustomField>