Perkin-UAT/force-app/main/default/objects/Order_Management__c/fields/Estimated_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ship_Date__c</fullName>
    <label>Estimated Ship Date</label>
    <type>Date</type>
</CustomField>