Perkin-UAT/force-app/main/default/objects/Order_Management__c/fields/SAP_Order_date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_date__c</fullName>
    <label>SAP Order Date</label>
    <type>Date</type>
</CustomField>